--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ packages = [{include = "django_djangoninja_alpinejs_crud"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 django = "^4.2.4"
+django-ninja = "^0.22.2"
+python-decouple = "^3.8"
+django-cors-headers = "^4.2.0"
 
 
 [build-system]
